# intelligent-investor-dashboard

./: .gitignore  DECISIONS.md  README.md  intelligent-investor-dca-dashboard-spec.md  pyproject.toml  requirements.txt
.github/workflows/: monthly.yml
.streamlit/: secrets.toml.example
config/: default.toml
src/iidca/: alerts.py  config.py  dashboard.py  models.py  run.py  storage.py
src/iidca/engines/: fusion.py  macro.py  tactical.py
src/iidca/providers/: base.py  fred.py  market.py  stooq_provider.py  tiingo_provider.py  tradingview_webhook.py  yfinance_provider.py
src/iidca/ui/: __init__.py  charts.py  components.py  readings.py  theme.py
tests/: conftest.py  test_config.py  test_fusion.py  test_macro.py  test_providers.py  test_tactical.py
